--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-3411207064
-徐家明
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    3411207064
+    徐家明
+    <a href="demo.html">元件練習</a> 
+</body>
+</html>
