--- a/demo.html
+++ b/demo.html
@@ -83,7 +83,7 @@
     <input type="button" value="登入">
     <input type="submit" value="登入2">
     </button>
-    <img src="school.gif" alt="25" height="25" alt="">
+    <img src="123.gif" alt="25" height="25" alt="">
     登入3
     </button>
     <br>
