--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    3411207064
-    徐家明
-    <a href="demo.html">元件練習</a> 
+3411207064
+徐家明
+<br>
+<a href="demo.html">元件練習</a>
+<br>
+<a href="css.html">css選擇器</a>
+<br>
+<a href="BACKGROUND.html">背景</a>
 </body>
 </html>
