--- a/css_all.html
+++ b/css_all.html
@@ -24,14 +24,14 @@
         }
         /* 字體樣式 */
         .font_style{
-            font-style: italic；
+            font-style: italic;
         }
         /* 文字線段 */
         .text_decoration{
         /* 不要有線 */
         /* text-decoration: none; */
         /* 劃掉 */
-        text-decoration: line-through；
+        text-decoration: line-through;
         }
     </style>
 </head>
