--- a/css_all.html
+++ b/css_all.html
@@ -33,6 +33,43 @@
         /* 劃掉 */
         text-decoration: line-through;
         }
+        /* 字體粗細 */
+        .font_weight{
+            font-size: bold;
+        }
+        /* 字體大小 */
+        .font_size{
+            font-size: 30px;
+        }
+        /* 字形 */
+        .font_family{
+            font-family: "標楷體";
+        }
+        /* link未訪問 */
+        .a_link:link{
+            color: red;
+        }
+        /* link訪問過 */
+        .a_link:visited{
+            color: green;
+        }
+        /* link移入 */
+        .a_link:hover{
+            text-decoration: none;
+        }
+        /* link點下 */
+        .a_link:active{
+            color: yellow;
+        }
+        /* list列表 */
+        .list{
+            /* 類型 */
+            list-style-type: square;
+            /* 位置 */
+            list-style-position: inside;
+            /* 圖片 */
+            list-style-image: url(777.jpg);
+        }
     </style>
 </head>
 <body>
@@ -42,6 +79,12 @@
 <div class="font_style">
 Font字型
 </div>
+<a href="#" class="a_link">國立台中科技大學</a>
+<ol class="list">
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+</ol>
 </body>
 </html>
 
